name:                sudoku-cli
version:             0.1.0.0
synopsis:            Command-line sudoku game
homepage:            https://github.com/evanrelf/sudoku-cli
license:             MIT
license-file:        LICENSE
author:              Evan Relf <evan@evanrelf.com>
maintainer:          Evan Relf <evan@evanrelf.com>
copyright:           2017 Evan Relf
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sudoku-cli
  hs-source-dirs:      src
  other-modules:       SudokuCLI
                     , UI
                     , FileIO
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fforce-recomp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , microlens
                     , microlens-th
                     , vty
